// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - Header should render Header with color paper 1`] = `
<Box
  className="makeStyles-appBarContainer-10"
>
  <AppBar
    className="makeStyles-paperBackground-4 makeStyles-withoutShadow-2"
    color="inherit"
    position="static"
  >
    <Toolbar>
      <IconButton
        className="makeStyles-menuButton-1"
        color="inherit"
        edge="start"
      >
        <MenuIcon />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-7 makeStyles-hideLoader-9"
    variant="indeterminate"
  />
</Box>
`;

exports[`Component - Header should render Header with type back 1`] = `
<Box
  className="makeStyles-appBarContainer-10"
>
  <AppBar
    className="makeStyles-defaultBackground-3 makeStyles-withoutShadow-2"
    color="inherit"
    position="static"
  >
    <Toolbar>
      <IconButton
        className="makeStyles-menuButton-1"
        color="inherit"
        edge="start"
      >
        <ArrowBackIcon />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-7 makeStyles-hideLoader-9"
    variant="indeterminate"
  />
</Box>
`;

exports[`Component - Header should render Header with type menu 1`] = `
<Box
  className="makeStyles-appBarContainer-10"
>
  <AppBar
    className="makeStyles-defaultBackground-3 makeStyles-withoutShadow-2"
    color="inherit"
    position="static"
  >
    <Toolbar>
      <IconButton
        className="makeStyles-menuButton-1"
        color="inherit"
        edge="start"
      >
        <MenuIcon />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-7 makeStyles-hideLoader-9"
    variant="indeterminate"
  />
</Box>
`;
